# march-madness

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: test.yml
data/: games.parquet  tourney2025.csv
src/march_madness/: __main__.py  tournament.py  transform.py
src/march_madness/cli/: __init__.py
src/march_madness/stan/: __init__.py  bracket.stan  functions.stan  history  history.stan  predict  predict.stan  season.stan
tests/: test_march_madness.py
